--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "weibo"
   ],
   "scripts": {
-    "build": "npm run build:bl && npm run build:bp && build:bc && npm run build:wl && npm run build:wd",
+    "build": "npm run build:bl && npm run build:bp && build:bc && npm run build:wl && npm run build:wd && build:nh",
     "dev:bl": "stylus -w ./bilibili-lite/src/index.styl -o ./bilibili-lite/index.user.css",
     "build:bl": "stylus ./bilibili-lite/src/index.styl -o ./bilibili-lite/index.user.css",
     "dev:bp": "stylus -w ./bilibili-palette/src/index.styl -o ./bilibili-palette/index.user.css",
@@ -27,6 +27,11 @@
     "dev:wb": "stylus -w ./weibo-lite/src/index.styl -o ./weibo-lite/index.user.css",
     "build:wb": "stylus ./weibo-lite/src/index.styl -o ./weibo-lite/index.user.css",
     "dev:wd": "stylus -w ./weibo-dark/src/index.styl -o ./weibo-dark/index.user.css",
-    "build:wd": "stylus ./weibo-dark/src/index.styl -o ./weibo-dark/index.user.css"
+    "build:wd": "stylus ./weibo-dark/src/index.styl -o ./weibo-dark/index.user.css",
+    "dev:nh": "stylus -w ./no-hidden/src/index.styl -o ./no-hidden/index.user.css",
+    "build:nh": "stylus ./no-hidden/src/index.styl -o ./no-hidden/index.user.css"
+  },
+  "devDependencies": {
+    "stylus": "^0.57.0"
   }
 }
